--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^2.6.11",
     "vue-axios": "^3.3.7",
     "vue-cookies": "^1.7.4",
+    "vue-ctk-date-time-picker": "^2.5.0",
     "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.2.0",
     "vue-tailwind": "^2.5.0",
