--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.23.0",
     "boxicons": "^2.0.9",
     "core-js": "^3.6.5",
+    "jquery": "^3.6.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-axios": "^3.3.7",
