--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "vue-material-dashboard",
   "version": "1.5.0",
   "private": true,
+  "engines": {
+    "node": "14.18.1"
+  },
   "scripts": {
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
@@ -12,7 +15,9 @@
     "axios": "^0.25.0",
     "chartist": "0.11.4",
     "core-js": "3.18.2",
+    "express": "^4.17.3",
     "google-maps": "4.3.3",
+    "serve-static": "^1.14.2",
     "vue": "2.6.14",
     "vue-axios": "^3.4.0",
     "vue-clickaway": "2.2.2",
